deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog
  namespace: blog
  annotations:
    cert-manager.io/issuer: acme-issuer
spec:
  selector:
    app: blog
  ports:
    - name: http
      port: 80
